--- a/src/app/pages/favorites/favorites.page.html
+++ b/src/app/pages/favorites/favorites.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent="true" class="ion-no-border">
   <ion-toolbar>
     <ion-title class="ion-text-center">
-      <strong>{{ showEnglishTitles ? 'Favorites' : 'Izikunda' }}</strong>
+      <strong>{{ showEnglishTitles ? 'Favorites' : 'Izukunda' }}</strong>
     </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="toggleLanguage()">
@@ -82,7 +82,7 @@
       <div class="empty-icon">
         <ion-icon name="heart-outline"></ion-icon>
       </div>
-      <h2>{{ showEnglishTitles ? 'No Favorites Yet' : 'Nta Zikunda' }}</h2>
+      <h2>{{ showEnglishTitles ? 'No Favorites Yet' : 'Nta Zukunda' }}</h2>
       <p>{{ showEnglishTitles ? 'Create your first favorite list to organize your hymns' : 'Rema urutonde rwawe rwambere rw\'indirimbo' }}</p>
       <ion-button (click)="addNewFavorite()" color="primary" size="large">
         <ion-icon name="add" slot="start"></ion-icon>
