--- a/src/app/pages/hymn-list/hymn-list.page.scss
+++ b/src/app/pages/hymn-list/hymn-list.page.scss
@@ -1,3 +1,7 @@
+ion-content {
+  --padding-bottom: calc(80px + env(safe-area-inset-bottom));
+}
+
 cdk-virtual-scroll-viewport {
   height: 100%;
   width: 100%;
